--- a/SDL_RenderClear.mediawiki
+++ b/SDL_RenderClear.mediawiki
@@ -37,17 +37,17 @@ int main(int argc, char** argv)
 		SDL_WINDOW_SHOWN);
 	
 	// We must call SDL_CreateRenderer in order for draw calls to affect this window.
-	SDL_CreateRenderer(window, -1, 0);
+	SDL_Renderer* renderer = SDL_CreateRenderer(window, -1, 0);
 	
 	// Select the color for drawing. It is set to red here.
-	SDL_SetRenderDrawColor(255, 0, 0, 0);
+	SDL_SetRenderDrawColor(renderer, 255, 0, 0, 0);
 	
 	// Clear the entire screen to our selected color.
-	SDL_RenderClear();
+	SDL_RenderClear(renderer);
 	
 	// Up until now everything was drawn behind the scenes.
 	// This will show the new, red contents of the window.
-	SDL_RenderPresent();
+	SDL_RenderPresent(renderer);
 	
 	// Give us time to see the window.
 	SDL_Delay(5000);
