--- a/CategoryEndian.mediawiki
+++ b/CategoryEndian.mediawiki
@@ -26,7 +26,7 @@ Endianness comes in two forms - big and little.
 
 SDL_BYTEORDER is a macro that corresponds to the byte order used by the processor type it was compiled for.
 * SDL_BYTEORDER is SDL_LIL_ENDIAN for x86, x64, and similar systems that use the little endian byte order.
-* SDL_BYTEORDER is SDL_BIG_ENDIAN for PowerPC Mac and similar systems that use the big endian byte order.
+* SDL_BYTEORDER is SDL_BIG_ENDIAN for PowerPC and similar systems that use the big endian byte order.
 
 
 == Functions ==
