--- a/Home.mediawiki
+++ b/Home.mediawiki
@@ -18,7 +18,7 @@ You can find the old SDL 1.2 wiki at: http://www.libsdl.org/cgi/docwiki.cgi.
 Use the links under the '''Navigation Links''' heading in the left-hand menu to access:
 
 * [[Introduction]]
-: An introduction to the features in SDL 1.3.
+: An introduction to the features in SDL 1.3.<br/>Includes a Migration Guide from 1.2 to 1.3!
 * API reference [[CategoryAPI|by Name]] or [[APIByCategory|by Category]]
 : The official documentation for the API.  Look here to find detailed information about the functions, structures, and enumerations.
 * [[Tutorials]]
