--- a/SDL_Palette.mediawiki
+++ b/SDL_Palette.mediawiki
@@ -15,13 +15,13 @@ A structure that contains palette information.
 |'''colors'''
 |an array of [[SDL_Color]] structures representing the palette
 |-
+|<style="color: #808080;">Uint32
+|<style="color: #808080;">'''version'''
+|<style="color: #808080;">incrementally tracks changes to the palette (internal use)
+|-
 |<style="color: #808080;">int
 |<style="color: #808080;">'''refcount'''
 |<style="color: #808080;">reference count (internal use)
-|-
-|<style="color: #808080;">SDL_Palette<code></code>Watch*
-|<style="color: #808080;">'''watch'''
-|<style="color: #808080;">a list of callbacks called when this palette has changed (internal use)
 |}
 
 == Code Examples ==
