--- a/Roadmap.mediawiki
+++ b/Roadmap.mediawiki
@@ -19,7 +19,8 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 
 === Required ===
 * Ryan: Implement landscape mode for iPhone port
-* Ryan: Add OpenGL 3.X context support
+* Sam: Add support for render targets
+* Sam: Add support for OpenGL context profiles
 * Sam: Create flags for specifying foreign window event behavior
 
 === Wishlist ===
@@ -70,11 +71,11 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 * <<Color2(green, Sam: Add a way to dynamically register for custom event types)>>
 
 === Required ===
-* Sam: Add a timestamp to events
 * Sam: Add modifier state to key and button events
 
 === Wishlist ===
-* Add a timeout parameter for [[SDL_WaitEvent]]() (http://lists.libsdl.org/pipermail/sdl-libsdl.org/2008-May/thread.html#65067)
+* ???: Add a timestamp to events
+* ???: Add a timeout parameter for [[SDL_WaitEvent]]() (http://lists.libsdl.org/pipermail/sdl-libsdl.org/2008-May/thread.html#65067)
 
 == Mouse Input ==
 
@@ -84,15 +85,15 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 * <<Color2(green, Sam: Add support color cursors)>>
 
 === Required ===
-* Ryan: Add support for multiple mice
-* Q: What is the mapping of individual mice to pointers?  Is there a "master pointer" that multiple mice share and then events for the individual mice?  Is there a dual mode, where you have a single pointer that all mice affect, and you can switch to multiple pointers, each affected by a single mouse?
-* Sam: Reimplement mouse grab support
+* LordHavoc: Reimplement mouse grab support
 * Verify cursor location is correct when ungrabbed
 * Verify proper behavior with Vista DPI scaling
 
 === Wishlist ===
+* Ryan: Add support for multiple mice
+* Q: What is the mapping of individual mice to pointers?  Is there a "master pointer" that multiple mice share and then events for the individual mice?  Is there a dual mode, where you have a single pointer that all mice affect, and you can switch to multiple pointers, each affected by a single mouse?
 * ???: Pressure/tilt support for tablet like devices
-* Sam: Add support animated cursors
+* ???: Add support animated cursors
 
 == Keyboard Input ==
 
@@ -144,13 +145,13 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 
 === Required ===
 * Sam: Public license for SDL_compat.c, tests, and SDL_main*
-* Sam: Create extended set of (negative) error codes and have the API functions document and return them
 * Sam: Figure out the best way to support simultaneous SDL 1.2 and SDL 1.3 installations
 * Sam: Write introductions for SDL 1.3 API documentation
 
 === Wishlist ===
 * ???: Create an API for live video capture
 * ???: Create an API for accelerometer data
+* ???: Create extended set of (negative) error codes and have the API functions document and return them
 
 ----
 Ryan has more information on the SDL 1.3 changes that you can find here: <br/>
