--- a/Roadmap.mediawiki
+++ b/Roadmap.mediawiki
@@ -1,3 +1,5 @@
+<!-- pragma camelcase off -->
+
 = SDL 1.3 Roadmap =
 
 This is a list of features which are in progress for the SDL 1.3 release.  The features are organized by subsystem and assigned to developers.  Features will move around as the design evolves.
@@ -147,6 +149,7 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 * Sam: Public license for SDL_compat.c, tests, and SDL_main*
 * Sam: Figure out the best way to support simultaneous SDL 1.2 and SDL 1.3 installations
 * Sam: Write introductions for SDL 1.3 API documentation
+* Sheena: Finish 1.3 API documentation
 
 === Wishlist ===
 * ???: Create an API for live video capture
