--- a/SDL_BlitSurface.mediawiki
+++ b/SDL_BlitSurface.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 '''DRAFT'''
 
 = SDL_BlitSurface =
@@ -8,10 +8,10 @@ Use this function to perform a fast blit from the source surface to the destinat
 
 == Syntax ==
 ```c++
-int SDL_BlitSurface(SDL_Surface* src,
-                    const SDL_Rect*    srcrect,
-                    SDL_Surface* dst,
-                    SDL_Rect*    dstrect)
+int SDL_BlitSurface(SDL_Surface*    src,
+                    const SDL_Rect* srcrect,
+                    SDL_Surface*    dst,
+                    SDL_Rect*       dstrect)
 ```
 
 == Function Parameters ==
