update content - 3/10 55a687c55676 (2/15 1800dc39b74c)

--- a/SDL_RenderClear.mediawiki
+++ b/SDL_RenderClear.mediawiki
@@ -61,7 +61,7 @@ int main(int argc, char* argv[])
 ```
 
 == Remarks ==
-''You can add useful comments here''
+This function clears the entire rendering target, ignoring the viewport.
 
 == Related Functions ==
 :[[SDL_SetRenderDrawColor]]
