update content - 3/10 55a687c55676 (2/15 1800dc39b74c)

--- a/SDL_RenderDrawRects.mediawiki
+++ b/SDL_RenderDrawRects.mediawiki
@@ -7,9 +7,9 @@ Use this function to draw some number of rectangles on the current rendering tar
 
 == Syntax ==
 ```c++
-int SDL_RenderDrawRects(SDL_Renderer*    renderer,
-                        const SDL_Rect** rects,
-                        int              count)
+int SDL_RenderDrawRects(SDL_Renderer*   renderer,
+                        const SDL_Rect* rects,
+                        int             count)
 ```
 
 == Function Parameters ==
