update content - 3/10 55a687c55676 (2/15 1800dc39b74c)

--- a/SDL_RenderFillRects.mediawiki
+++ b/SDL_RenderFillRects.mediawiki
@@ -7,9 +7,9 @@ Use this function to fill some number of rectangles on the current rendering tar
 
 == Syntax ==
 ```c++
-int SDL_RenderFillRects(SDL_Renderer*    renderer,
-                        const SDL_Rect** rect,
-                        int              count)
+int SDL_RenderFillRects(SDL_Renderer*   renderer,
+                        const SDL_Rect* rect,
+                        int             count)
 ```
 
 == Function Parameters ==
