--- a/SDL_Keysym.mediawiki
+++ b/SDL_Keysym.mediawiki
@@ -10,22 +10,20 @@ A structure that contains ^key codes^ used in key events.
 {|
 |SDL_Scancode
 |'''scancode'''
-|SDL physical key code - see [[SDL_Scancode]] for details
+|SDL physical key code; see [[SDL_Scancode]] for details
 |-
 |SDL_Keycode
 |'''sym'''
-|SDL virtual key code - see [[SDL_Keycode]] for details
+|SDL virtual key code; see [[SDL_Keycode]] for details
 |-
 |Uint16
 |'''mod'''
-|current key modifiers
+|current key modifiers^; see [[SDL_Keymod]] for details^
 |-
 |Uint32
 |'''unicode'''
-|deprecated use [[SDL_TextInputEvent]] instead
+|deprecated, use [[SDL_TextInputEvent]] instead
 |}
-
-<<Color2(green,Should '''mod''' reference [[SDL_Mod]]?)>>
 
 == Code Examples ==
 ```c++
